# faux

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: main.rs
faux_core/: Cargo.toml
faux_core/src/: error.rs  frame.rs  io.rs  lib.rs
faux_core/src/protocol/: handshake.rs  mod.rs  response.rs
server/: Cargo.toml
server/src/: client.rs  main.rs  server.rs
