[package]
name = "faux_core"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0.1"
thiserror = "1.0.25"
tokio = { version = "1.7.1", features = ["io-util"] }
tokio-util = { version = "0.6.7", features = ["codec"] }
